# lightrl

./: .pre-commit-config.yaml  404.html  README.md  api.py  index.html  minimal_example.py  mkdocs.yml  objects.inv  pyproject.toml  requirements_dev.txt  temp.txt  tox.ini
.github/workflows/: docs.yml  publish.yml  test.yml  test_main.yml
api/: index.html
docs/: api.md  examples.md  index.md  installation.md  quickstart.md
examples/: README.md  ab_testing.py  ad_serving.py  agent_fleet_roi.py  agent_router.py  contextual_model_routing.py  db_query_routing.py  dynamic_pricing.py  ema_nonstationary.py  hyperparameter_search.py  index.html  llm_cost_optimizer.py  minimal_example.py  network_routing.py  persistence.py  prompt_template_selection.py  resource_allocation.py  retry_backoff.py  warm_start.py
installation/: index.html
licence/: index.html
lightrl/: __init__.py  bandits.py  contextual.py  router.py  runners.py
quickstart/: index.html
scripts/: check_author.sh  no_coauthor.sh
search/: search_index.json
tests/: test_bandits.py  test_contextual.py  test_e2e_simulated_api.py  test_features.py  test_persistence.py  test_router.py  test_runners.py  test_thompson.py
