[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "lightrl"
version = "0.1.1"
description = "A lightweight reinforcement learning package"
authors = [
    { name = "Daniel Herman", email = "daniel.herman@protonmail.com" }
]
license = { file = "LICENSE" }
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]
dependencies = ["tqdm"]

[project.optional-dependencies]
dev = [
    "pytest",
    "ruff",
    "mypy",
    "types-tqdm",
    "pre-commit",
    "tox",
    "tox-uv",
]

[tool.hatch.build.targets.wheel]
packages = ["lightrl"]

[tool.ruff]
target-version = "py38"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = []

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true

[tool.tox]
env_list = ["py38", "py39", "py310", "py311", "py312", "py313", "lint"]

[tool.tox.env_run_base]
deps = [".[dev]"]
commands = [["pytest", "-v", "tests"]]

[tool.tox.env.lint]
description = "run linters"
deps = ["ruff", "mypy", "types-tqdm"]
skip_install = true
commands = [
    ["ruff", "check", "lightrl"],
    ["mypy", "lightrl"],
]
